must confirm age before search

--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -91,6 +91,14 @@
       padding: 0 56px;
       padding-bottom: 20px;
       justify-content: space-between;
+      .confirm-age {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        .error {
+          font-weight: 500;
+        }
+      }
       label {
         display: flex;
         gap: 4px;
