--- a/src/assets/styles/components/ProfileSearchBar.scss
+++ b/src/assets/styles/components/ProfileSearchBar.scss
@@ -1,34 +1,44 @@
-.profile-search-bar {
-  width: 100%;
-  border-bottom: solid 2px var(--secondary-background);
-  padding: 1rem;
-  box-sizing: border-box;
+.search-sort-bar {
   display: flex;
-  form {
-    background-color: var(--secondary-background);
-    width: 100%;
-    padding: 0.5rem;
-    display: grid;
-    align-items: center;
-    grid-template-columns: auto minmax(0, 1fr);
-    button {
-      height: 100%;
-      border: none;
-      &:hover {
-        cursor: pointer;
+  align-items: center;
+  .search {
+    flex: 1;
+    padding: 16px 0 16px 16px;
+    box-sizing: border-box;
+    display: flex;
+    form {
+      background-color: var(--secondary-background);
+      width: 100%;
+      padding: 0.5rem;
+      display: grid;
+      align-items: center;
+      grid-template-columns: auto minmax(0, 1fr);
+      button {
+        height: 100%;
+        border: none;
+        &:hover {
+          cursor: pointer;
+        }
+        i {
+          margin: 0 1rem;
+          font-size: 1.25rem;
+        }
       }
-      i {
-        margin: 0 1rem;
-        font-size: 1.25rem;
+      input {
+        background-color: transparent;
+        border: none;
+        font-size: 1rem;
+        &:focus {
+          outline: none;
+        }
       }
     }
-    input {
-      background-color: transparent;
+  }
+  .sort {
+    padding: 16px;
+    .sort-by-select {
+      padding: 0px;
       border: none;
-      font-size: 1rem;
-      &:focus {
-        outline: none;
-      }
     }
   }
 }
