--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -19,6 +19,7 @@
 @import "./components/CarCard.scss";
 @import "./components/Footer.scss";
 @import "./components/SigninBox.scss";
+@import "./components/ConfirmModal.scss";
 @import "./components/ContactFooter.scss";
 @import "./components/SeoFooter.scss";
 @import "./pages/AddCarPage.scss";
