--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -54,7 +54,8 @@
           position: absolute;
           right: -15px;
           margin-top: 8px;
-          width: 200px;
+          width: max-content;
+          min-width: 200px;
           border-radius: 8px;
           background-color: var(--contrast-color);
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
@@ -88,6 +89,13 @@
                   color: var(--secondary-color);
                   font-weight: 600;
                 }
+              }
+            }
+            .in-progress {
+              &:hover {
+                cursor: default;
+                color: var(--primary-color);
+                font-weight: 400;
               }
             }
           }
