cancel spin button in input number

--- a/src/assets/styles/pages/LessorRegisterationPage.scss
+++ b/src/assets/styles/pages/LessorRegisterationPage.scss
@@ -31,6 +31,14 @@
       #drivinglicenseimg {
         padding: 6px 0;
       }
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      input[type="number"] {
+        -moz-appearance: textfield;
+      }
     }
     .validate-false {
       margin-top: 8px;
