my profile validation completed

--- a/src/assets/styles/components/MyProfile.scss
+++ b/src/assets/styles/components/MyProfile.scss
@@ -13,11 +13,19 @@
       border-bottom: 1px solid var(--secondary-background);
       display: grid;
       grid-template-columns: 30% 70%;
-      align-items: center;
+      align-items: baseline;
+      select {
+        width: fit-content;
+        appearance: menulist;
+      }
       .value {
         color: var(--placeholder-color);
         overflow: hidden;
         text-overflow: ellipsis;
+      }
+      .input-error {
+        display: flex;
+        flex-direction: column;
       }
     }
   }
