--- a/src/assets/styles/components/Notification.scss
+++ b/src/assets/styles/components/Notification.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 56px;
   right: -10px;
-  min-width: 450px;
+  min-width: 550px;
   max-height: 500px;
   overflow-y: scroll;
   border-radius: 8px;
@@ -38,13 +38,14 @@
         justify-content: center;
         align-items: center;
         margin-right: 16px;
-        width: 18px;
-        height: 18px;
+        width: 26px;
+        height: 26px;
         padding: 4px;
         font-weight: 500;
         border-radius: 50%;
         background-color: var(--secondary-color);
         color: var(--contrast-color);
+        box-sizing: border-box;
       }
       &:hover {
         background-color: rgb(74, 96, 161, 0.1);
