--- a/src/assets/styles/components/CarInforTable.scss
+++ b/src/assets/styles/components/CarInforTable.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  width: 1000px;
   .car-table {
     display: flex;
     flex-direction: column;
